<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="userName">User Name:</string>
    <string name="password">Password:</string>
    <string name="serverPort">Server Port:</string>
    <string name="serverHost">Server Host:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signIn">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="PersonFirstName">First Name</string>
    <string name="PersonLastName">Last Name</string>
    <string name="PersonGender">Gender</string>
    <string name="father">Father</string>
    <string name="Mother">Mother</string>
    <string name="Spouse">Spouse</string>
    <string name="Child">Child</string>
    <string name="menu">Menu</string>
    <string name="setting">setting</string>
    <string name="search">search</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="logout_string">Logout</string>
    <string name="return_to_login_screen">RETURN TO LOGIN SCREEN</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="filter_by_father_s_side_of_family">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="filter_by_mother_s_side_of_family">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="filter_events_based_on_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>

</resources>
