<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".UI.PersonActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/personBoxLinear">
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/firstName"
            android:id="@+id/personFirstName"
            android:textSize="20sp"
            />
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/PersonFirstName"
            android:textSize="15sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#808080"
            />

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/lastName"
            android:id="@+id/personLastName"
            android:textSize="20sp"
            />
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/PersonLastName"
            android:textSize="15sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#808080"
            />
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/PersonGender"
            android:id="@+id/personGender"
            android:textSize="20sp"
            />
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/PersonGender"
            android:textSize="15sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#808080"
            />
    </LinearLayout>

        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ExpandableListView"
            android:dividerHeight="0.5dp"
            android:divider="@color/light_black"
            android:layout_below="@id/personBoxLinear"
            />




    </RelativeLayout>